fix menu z-index on landscape iphones

--- a/admin/static/main.css
+++ b/admin/static/main.css
@@ -30,6 +30,9 @@ body {
 
 /* links + colours */
 
+span.action {
+	padding: 0px 5px;	
+}
 a:link, 
 a:visited,
 a:active {
