--- a/static/css/global.css
+++ b/static/css/global.css
@@ -51,7 +51,7 @@ a:active {
 header {
 	position: relative;
 	padding: 20px;
-	z-index: 10;
+	/*z-index: 10;*/
 }
 
 ul {
